test/2/docker-compose.yml
version: '3.8'

services:
  # 应用服务 (dict-app)
  dict-app:
    image: travel-ota
    networks:
      - service-network
    environment:
      # 显式配置代理
      - HTTP_PROXY=http://envoy-dict-app:15001
      - HTTPS_PROXY=http://envoy-dict-app:15001
      - http_proxy=http://envoy-dict-app:15001
      - https_proxy=http://envoy-dict-app:15001
    ports:
      - "8080:8080"
    # 如果您希望入站流量也经过 Envoy，可以在应用中显式调用
    # 例如：curl http://envoy-dict-app:15006/your-endpoint
    # 添加 airline API 服务
  airline-api:
    image: sp-airline  # 替换为实际镜像
    networks:
      - service-network
    ports:
      - "8081:8081"


  # dict-app 的 Envoy sidecar
  envoy-dict-app:
    image: gcr.io/cs-poc-sasxbttlzroculpau4u6e2l/sp-envoy:v1.1.7
    volumes:
      - ./envoy.yaml:/etc/envoy/envoy.yaml
    networks:
      - service-network
    ports:
      - "15001:15001"  # 出站流量
      - "15006:15006"  # 入站流量


networks:
  service-network:
    driver: bridge
