test/2/envoy.yaml
static_resources:
  listeners:
    # 入站流量监听器 (处理发往本服务的请求)
    - name: inbound_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 15006
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: inbound_http
                codec_type: AUTO
                route_config:
                  name: inbound_route
                  virtual_hosts:
                    - name: inbound
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/v1/flights/"
                          route:
                            cluster: airline_cluster
                            prefix_rewrite: "/airline-api/v1/flights/"
                        - match:
                            prefix: "/"
                          route:
                            cluster: demo-ota
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: "sp_agent_inbound"
                        vm_config:
                          vm_id: "sp_agent_inbound"
                          runtime: "envoy.wasm.runtime.v8"
                          allow_precompiled: true
                          code:
                            local:
                              filename: "/etc/envoy/sp_istio_agent.wasm"
                        configuration:
                          "@type": type.googleapis.com/google.protobuf.StringValue
                          value: |
                            {
                              "traffic_direction": "inbound",
                              "service_name": "sp-travel-ota",
                              "api_key": "test123",
                              "sp_backend_url": "http://host.docker.internal:9081",
                              "enable_inject": false,
                              "collectionRules": {
                                "http": {
                                  "server": [
                                    { "path": ".*" }
                                  ],
                                  "client": []
                                }
                              }
                            }
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      suppress_envoy_headers: false

    # 出站流量监听器 (处理本服务发起的请求)
    - name: outbound_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 15001
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: outbound_http
                codec_type: AUTO
                route_config:
                  name: outbound_route
                  virtual_hosts:
                    - name: outbound
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/airline-api/"
                          route:
                            cluster: airline_cluster
                        - match:
                            prefix: "/v1/flights/"
                          route:
                            cluster: airline_cluster
                            prefix_rewrite: "/airline-api/v1/flights/"
                        - match:
                            prefix: "/"
                          route:
                            cluster: httpbin_cluster
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: "sp_agent_outbound"
                        vm_config:
                          vm_id: "sp_agent_outbound"
                          runtime: "envoy.wasm.runtime.v8"
                          allow_precompiled: true
                          code:
                            local:
                              filename: "/etc/envoy/sp_istio_agent.wasm"
                        configuration:
                          "@type": type.googleapis.com/google.protobuf.StringValue
                          value: |
                            {
                              "traffic_direction": "outbound",
                              "service_name": "sp-travel-ota",
                              "sp_backend_url": "http://host.docker.internal:9081",
                              "api_key": "test123",
                              "enable_inject": false,
                              "collectionRules": {
                                "http": {
                                  "server": [],
                                  "client": [
                                    {
                                      "host": ".*",
                                      "paths": [".*"]
                                    }
                                  ]
                                }
                              }
                            }
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      suppress_envoy_headers: false

  clusters:
    - name: demo-ota
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: demo-ota
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: dict-app
                      port_value: 8080

    - name: inbound_passthrough
      type: ORIGINAL_DST
      lb_policy: CLUSTER_PROVIDED
      connect_timeout: 10s

    - name: httpbin_cluster
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: httpbin_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin
                      port_value: 80

    - name: airline_cluster
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: airline_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 8081

    - name: sp_backend
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: sp_backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 9081

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 18001
